# rugai

./: .gitattributes  .gitignore  README.md  model_training_updated.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
model/weights/: ImprovedCNN_20241126_070802_best.h5  NeuralNetworkWithDropout_20241110_214240_best.h5  ResNet_20241206_070301_best.h5
notebooks/: model_training.ipynb  model_training_updated.ipynb  model_training_workflow.ipynb
rugai/: __init__.py
rugai/app/: app.py
rugai/app/ml_framework/: __init__.py  inference.py
rugai/app/utils/: preprocessing.py
rugai/scraper/: simple_scraper.py
src/: scraper_runner.py
src/app/: app.py
src/app/config/: config.yaml
src/app/ml_framework/: __init__.py  inference.py  model.py
src/app/utils/: __init__.py
src/config/: .sample_env  config.py
src/scraper/: selenium_scraper.py
src/scraper/config/: config.py
