[tool.poetry]
name = "rugai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
bs4 = "^0.0.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
loguru = "^0.7.2"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
